--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "socket.io": "^3.0.3",
     "socket.io-client": "^3.0.3",
     "styled-components": "^5.2.1"
