--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@datepicker-react/styled": "^2.7.0",
     "amadeus": "^5.6.0",
-    "axios": "^0.21.0",
+    "axios": ">=0.21.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
