--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@datepicker-react/styled": "^2.7.0",
+    "@fullcalendar/daygrid": "^5.5.0",
+    "@fullcalendar/list": "^5.5.0",
+    "@fullcalendar/react": "^5.5.0",
+    "@fullcalendar/timegrid": "^5.5.1",
     "amadeus": "^5.6.0",
     "axios": "0.21.1",
     "bcrypt": "^5.0.0",
@@ -42,9 +46,12 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
+    "@fullcalendar/interaction": "^5.5.0",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
     "enzyme": "^3.11.0",
     "jest": "^26.6.3",
+    "style-loader": "^2.0.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^4.2.0"
   }
